--- a/app/src/main/res/layout/fragment_add_meal_tab.xml
+++ b/app/src/main/res/layout/fragment_add_meal_tab.xml
@@ -6,182 +6,261 @@
     android:layout_height="match_parent"
     tools:context=".fragments.AddMealTab">
 
-    <!-- TODO: Add proper comments -->
-
     <!-- Constrained Layout for responsiveness -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
-        <!-- Label for meal name -->
-        <TextView
-            android:id="@+id/meal_name_label"
-            android:layout_width="wrap_content"
+        <!-- CardView for meal name -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/meal_name_card"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="25dp"
-            android:layout_marginTop="32dp"
-            android:text="Name"
-            android:textColor="#49569E"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <!-- Meal name field -->
-        <EditText
-            android:id="@+id/meal_name_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Rice bowl"
-            android:inputType="text"
-            android:textColor="#006666"
-            android:textSize="35sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/meal_name_label"
+            android:layout_margin="20dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/meal_name_label"
-            app:layout_constraintTop_toTopOf="@+id/meal_name_label" />
-
-        <!-- Label for meal type content -->
-        <TextView
-            android:id="@+id/meal_type_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            android:text="Meal type"
-            android:textColor="#49569E"
-            android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/meal_name_label" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <!-- Spinner for meal type  -->
-        <Spinner
-            android:id="@+id/meal_type_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/meal_type_label"
-            app:layout_constraintStart_toStartOf="@+id/meal_name_field"
-            app:layout_constraintTop_toTopOf="@+id/meal_type_label" />
+            <!-- LinearLayout for meal name -->
+            <LinearLayout
+                android:id="@+id/meal_name_linear_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <!-- Label for meal energy content -->
-        <TextView
-            android:id="@+id/meal_energy_label"
-            android:layout_width="wrap_content"
+                <!-- Label for meal name -->
+                <TextView
+                    android:id="@+id/meal_name_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp"
+                    android:text="Name"
+                    android:textColor="#49569E"
+                    android:textSize="25sp"
+                    android:textStyle="bold"/>
+
+                <!-- Meal name field -->
+                <EditText
+                    android:id="@+id/meal_name_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:hint="Rice bowl"
+                    android:inputType="text"
+                    android:textColor="#006666"
+                    android:textSize="25sp"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- CardView for meal type -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/meal_type_card"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            android:text="Energy"
-            android:textColor="#49569E"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:layout_margin="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/meal_type_label" />
+            app:layout_constraintTop_toBottomOf="@+id/meal_name_card">
 
-        <!-- Meal energy content field -->
-        <EditText
-            android:id="@+id/meal_energy_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="650Cal"
-            android:inputType="number|numberDecimal"
-            android:textColor="#006666"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/meal_energy_label"
-            app:layout_constraintStart_toStartOf="@+id/meal_name_field"
-            app:layout_constraintTop_toTopOf="@+id/meal_energy_label" />
+            <!-- LinearLayout for meal type -->
+            <LinearLayout
+                android:id="@+id/meal_type_linear_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <!-- Label for meal protein content-->
-        <TextView
-            android:id="@+id/meal_protein_label"
-            android:layout_width="wrap_content"
+                <!-- Label for meal type content -->
+                <TextView
+                    android:id="@+id/meal_type_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp"
+                    android:text="Meal type"
+                    android:textColor="#49569E"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+
+                <!-- Spinner for meal type  -->
+                <Spinner
+                    android:id="@+id/meal_type_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- CardView for meal energy -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/meal_energy_card"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            android:text="Protein"
-            android:textColor="#49569E"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:layout_margin="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/meal_energy_label" />
+            app:layout_constraintTop_toBottomOf="@+id/meal_type_card">
 
-        <!-- Meal protein content field -->
-        <EditText
-            android:id="@+id/meal_protein_field"
-            android:layout_width="wrap_content"
+            <!-- LinearLayout for meal energy -->
+            <LinearLayout
+                android:id="@+id/meal_energy_linear_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!-- Label for meal energy content -->
+                <TextView
+                    android:id="@+id/meal_energy_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp"
+                    android:text="Energy"
+                    android:textColor="#49569E"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+
+                <!-- Meal energy content field -->
+                <EditText
+                    android:id="@+id/meal_energy_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:hint="650Cal"
+                    android:inputType="number|numberDecimal"
+                    android:textColor="#006666"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- CardView for meal protein -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/meal_protein_card"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="60g"
-            android:inputType="number|numberDecimal"
-            android:textColor="#006666"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/meal_protein_label"
-            app:layout_constraintStart_toEndOf="@+id/meal_protein_label"
-            app:layout_constraintStart_toStartOf="@+id/meal_name_field"
-            app:layout_constraintTop_toTopOf="@+id/meal_protein_label" />
-
-
-        <!-- Label for meal fats content -->
-        <TextView
-            android:id="@+id/meal_fats_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            android:hint="60g"
-            android:text="Fats"
-            android:textColor="#49569E"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:layout_margin="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/meal_protein_label" />
+            app:layout_constraintTop_toBottomOf="@+id/meal_energy_card">
 
-        <!-- Meal fats content field -->
-        <EditText
-            android:id="@+id/meal_fats_field"
-            android:layout_width="wrap_content"
+            <!-- LinearLayout for meal protein -->
+            <LinearLayout
+                android:id="@+id/meal_protein_linear_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!-- Label for meal protein content-->
+                <TextView
+                    android:id="@+id/meal_protein_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp"
+                    android:text="Protein"
+                    android:textColor="#49569E"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+
+                <!-- Meal protein content field -->
+                <EditText
+                    android:id="@+id/meal_protein_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:hint="60g"
+                    android:inputType="number|numberDecimal"
+                    android:textColor="#006666"
+                    android:textSize="25sp"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- CardView for meal fats -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/meal_fats_card"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="60g"
-            android:inputType="number|numberDecimal"
-            android:textColor="#006666"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/meal_fats_label"
-            app:layout_constraintStart_toStartOf="@+id/meal_name_field"
-            app:layout_constraintTop_toTopOf="@+id/meal_fats_label" />
-
-
-        <!-- Label for meal carbohydrates content -->
-        <TextView
-            android:id="@+id/meal_carbohydrates_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            android:text="Carbohydrates"
-            android:textColor="#49569E"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:layout_margin="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/meal_fats_label" />
+            app:layout_constraintTop_toBottomOf="@+id/meal_protein_card">
 
-        <!-- Meal content carbohydrates field -->
-        <EditText
-            android:id="@+id/meal_carbohydrates_field"
-            android:layout_width="wrap_content"
+            <!-- LinearLayout for meal fats -->
+            <LinearLayout
+                android:id="@+id/meal_fats_linear_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!-- Label for meal fats content -->
+                <TextView
+                    android:id="@+id/meal_fats_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp"
+                    android:text="Fats      "
+                    android:textColor="#49569E"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <!-- Meal fats content field -->
+                <EditText
+                    android:id="@+id/meal_fats_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:hint="60g"
+                    android:inputType="number|numberDecimal"
+                    android:textColor="#006666"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- CardView for meal carbohydrates -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/meal_carbohydrates_card"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:hint="60g"
-            android:inputType="number|numberDecimal"
-            android:textColor="#006666"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/meal_carbohydrates_label"
-            app:layout_constraintStart_toEndOf="@+id/meal_carbohydrates_label"
-            app:layout_constraintTop_toTopOf="@+id/meal_carbohydrates_label" />
+            android:layout_margin="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/meal_fats_card">
+
+            <!-- LinearLayout for meal carbohydrates -->
+            <LinearLayout
+                android:id="@+id/meal_carbohydrates_linear_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <!-- Label for meal carbohydrates content -->
+                <TextView
+                    android:id="@+id/meal_carbohydrates_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp"
+                    android:text="Carbohydrates"
+                    android:textColor="#49569E"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <!-- Meal content carbohydrates field -->
+                <EditText
+                    android:id="@+id/meal_carbohydrates_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:hint="60g"
+                    android:inputType="number|numberDecimal"
+                    android:textColor="#006666"
+                    android:textSize="25sp"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
         <!-- ImageView for uploading the image -->
         <ImageView
@@ -192,7 +271,7 @@
             android:src="@mipmap/ic_launcher"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/meal_carbohydrates_field" />
+            app:layout_constraintTop_toBottomOf="@+id/meal_carbohydrates_card" />
 
         <!-- Button to select image -->
         <Button
