--- a/app/src/main/res/layout/fragment_add_meal_tab.xml
+++ b/app/src/main/res/layout/fragment_add_meal_tab.xml
@@ -11,6 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!-- Add new meal label -->
+        <TextView
+            android:id="@+id/meal_add_meal_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="25dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:text="Add today's meal"
+            android:textColor="#2A2AA5"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <!-- CardView for meal name -->
         <androidx.cardview.widget.CardView
             android:id="@+id/meal_name_card"
@@ -19,7 +34,7 @@
             android:layout_margin="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/meal_add_meal_label">
 
             <!-- LinearLayout for meal name -->
             <LinearLayout
