--- a/app/src/main/res/layout/fragment_add_meal_tab.xml
+++ b/app/src/main/res/layout/fragment_add_meal_tab.xml
@@ -7,10 +7,15 @@
     tools:context=".fragments.AddMealTab">
 
     <!-- Constrained Layout for responsiveness -->
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/content">
         <!-- Add new meal label -->
         <TextView
             android:id="@+id/meal_add_meal_label"
@@ -283,7 +288,9 @@
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:layout_margin="32dp"
-            android:src="@mipmap/ic_launcher"
+            android:padding="20dp"
+            android:background="@drawable/home_background"
+            android:src="@drawable/logo_white_nobg_cropped"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/meal_carbohydrates_card" />
@@ -293,28 +300,20 @@
             android:id="@+id/meal_select_image_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="32dp"
+            android:layout_margin="20dp"
             android:text="Select Image"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/meal_add_image_view" />
 
-        <!-- Progress bar to show upload progress -->
-        <ProgressBar
-            android:id="@+id/meal_upload_meal_progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/meal_select_image_button" />
 
         <!-- Button to upload the meal -->
         <Button
             android:id="@+id/upload_meal_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
+            android:layout_margin="20dp"
             android:backgroundTint="#1EB026"
             android:text="Save meal"
             android:textSize="25sp"
@@ -322,8 +321,44 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/meal_upload_meal_progress_bar" />
+            app:layout_constraintTop_toBottomOf="@+id/meal_select_image_button" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/meal_upload_meal_progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:cardElevation="500dp"
+            app:layout_constraintBottom_toBottomOf="parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+            <TextView
+                android:id="@+id/track_view_meal_name_field"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Saving.."
+                android:textColor="#006666"
+                android:textSize="50sp"
+                android:textStyle="bold" />
+            <!-- Progress bar to show upload progress -->
+            <ProgressBar
+                android:id="@+id/meal_progress_bar_card"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:backgroundTint="#00ff00"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/meal_select_image_button" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </ScrollView>
