--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,7 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.OFYWellness" parent="Base.Theme.OFYWellness" />
+    <style name="Theme.OFYWellness" parent="Base.Theme.OFYWellness">
+        <item name="android:fontFamily">@font/montserrat_bold</item>>
+</style>
 </resources>
