--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,84 +8,77 @@
     tools:context=".HomeActivity">
     <!-- TODO:Add proper comments till tab layout-->
 
-    <!--Top bar Section Starts -->
+    <!--Top bar Starts -->
+    <!-- LinearLayout for image and contents of top bar -->
     <LinearLayout
         android:id="@+id/top_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/home_background"
-        android:orientation="vertical"
-        app:layout_scrollFlags="">
+        android:orientation="horizontal">
 
-        <!--Head Section Starts -->
-
+        <!-- LinearLayout for contents of top bar -->
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/profile_container">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
+            <!-- LinearLayout for logo, company and tag line of top bar -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                <!-- ImageView for logo of top bar -->
+                <ImageView
+                    android:id="@+id/top_logo"
+                    android:layout_width="0dp"
+                    android:layout_height="100dp"
+                    android:layout_marginVertical="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/logo_white_nobg_cropped" />
 
-                    <ImageView
-                        android:id="@+id/logo"
-                        android:layout_width="0dp"
-                        android:layout_height="100dp"
-                        android:layout_marginVertical="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/logo_white_nobg_cropped"
-                        android:onClick="categorystart" />
-
-                    <TextView
-                        android:id="@+id/topic"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginVertical="10dp"
-                        android:layout_weight="1"
-                        android:text="OFY Clinics"
-                        android:textAlignment="center"
-                        android:textColor="#ffffff"
-                        android:textSize="35sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
+                <!-- TextView for logo of top bar -->
                 <TextView
-                    android:id="@+id/topic1"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/top_company_name_text_view"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Meet a better you"
+                    android:layout_marginVertical="10dp"
+                    android:layout_weight="1"
+                    android:text="OFY Clinics"
                     android:textAlignment="center"
                     android:textColor="#ffffff"
-                    android:textSize="20sp" />
+                    android:textSize="35sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/heading_image"
+            <!-- TextView for tagline of top bar -->
+            <TextView
+                android:id="@+id/topic1"
                 android:layout_width="wrap_content"
-                android:layout_height="150dp"
-                android:layout_margin="5dp"
-                android:layout_weight="2"
-                android:background="@drawable/headimage" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Meet a better you"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
+        <!-- ImageView for additional girl image of top bar -->
+        <ImageView
+            android:id="@+id/heading_image"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:layout_margin="5dp"
+            android:layout_weight="2"
+            android:background="@drawable/headimage" />
+
     </LinearLayout>
-    <!--Top Bar Ends -->
 
     <!-- Layout to show the tab bar-->
     <com.google.android.material.tabs.TabLayout
